new commit jobs

--- a/src/components/Jobs/jobs.css
+++ b/src/components/Jobs/jobs.css
@@ -1,12 +1,19 @@
-:root {
-  --firstColor: #018883;
-  --secondColor: #1B3F6B;
+
+.form-check-label {
+  margin-left: -40px !important;
+  color:#e1e1e1 !important;
+  font-size: 17px;
+  font-weight: 500;
 }
 .menu-job-component1{
-    background-color: rgba(0, 0, 0, 0.19);
+  background-color:var(--secondColor) !important;
     width: 362px;
     color: var(--white);
     border-radius: 5px;
+  }
+  .job-card-component {
+    background-color:var(--secondColor) !important;
+    color: white !important;
   }
   .menu-job-component1 .menu-section1 {
     padding: 20px;
@@ -17,8 +24,8 @@
   .p-subtitle{
     color: var(--white);
   }
-  .create-cv-btn {
-    background-color: var(--secondColor) !important;
+  .Create-your-cv {
+    background-color: var(--firstColor) !important;
   }
   .menu-job-component1 .contacts-job1 {
     background-color: var(--firstColor) !important;
@@ -34,11 +41,25 @@
     color: var(--secondColor) 1 !important;
     border-radius: 5px;
   }
-
-
+  .job-card-component .btn1 {
+    background-color: var(--firstColor) !important;
+    border: none !important;
+  }
+  .job-card-component .card-text  {
+    line-height: 10px !important;
+  }
+  .job-card-component .btn2 {
+    background: transparent !important;
+    border-color: var(--firstColor) !important;
+    float: "right";
+  }
+  
+.jobshow-row,.jobapp-row{
+  margin-top: 55px !important;
+}
   /* //////////////////////////////////////////////////second page////////////////////////// */
   .job-screen-show1 .contacts-job1 {        /* background el card */   
-    background-color: rgb(203, 223, 231) !important;
+    background-color: var(--secondColor) !important;
     flex: 70%;
     height: 90%;
     padding: 20px;
@@ -47,7 +68,7 @@
  
   .job-screen-show1 .menu-section1 {         /* background el side */  
     padding: 20px;
-    background-color: rgb(203, 223, 231) !important;
+    background-color: var(--secondColor) !important;
   }
   .menu-job-component1 .clear-all1 {
     color: var(--secondColor) 1 !important;
@@ -74,9 +95,18 @@
     outline: 0;
     transition: all 0.3s ease-in;
   }
-  .menu-job-component1 option.options-location {
-    color: #fff;
-    background-color: #292828 !important;
+  .menu-job-component1 option.options-location,.job-screen-show1 option.options-location , .job-app-screen_1 option.options-location {
+    color: var(--secondColor) !important;
+    background-color: #ffffff !important;
+  }
+  .menu-job-box1  .clear-all1 {
+    color: var(--secondColor) !important;
+    border-radius: 5px;
+  }
+ .btn-apply1 button {
+    width: 20%;
+    background-color: var(--firstColor) !important;
+    border: 0;
   }
   /* Check boxs */
   .menu-job-component1 .form-check-input{background-color: transparent;
@@ -142,24 +172,9 @@
 
 
 /* body{height: 3000px;} */
-.job-card-component {
-    background-color:var(--secondColor) !important;
-  
-    color: white !important;
-  }
-  .job-card-component .btn1 {
-    background-color: var(--firstColor) !important;
-    border: none !important;
-  }
-  .job-card-component .card-text  {
-    line-height: 10px !important;
-  }
-  .job-card-component .btn2 {
-    background: transparent !important;
-    border-color: var(--Primary) !important;
-    float: "right";
-  }
-  
+
+ 
+
   .job-card-component .jobimg {
     width: 3.3rem;
     height: 40px;
@@ -180,10 +195,11 @@
   background-color: transparent;
   color: #1b1b1b;
 }
-.job-screen1 .contentjobscreen{
+
+.job-screen1 .contentjobscreen ,.jobapp-col ,.Looking-job1{
   color: var(--white);
 }
-.job-screen1 .contentjobscreen h2{
+.job-screen1 .contentjobscreen h2 , .jobapp-col h2 , .Looking-job1 h2{
   font-weight: 700;
 }
 .job-screen1 .form-control {
@@ -191,11 +207,11 @@
   border-radius: 5px 0px 0px 5px / 5px 0px 0px 5px;
   display: inline-block;
 }
-.job-screen1 .btn-subscribe1{
+.job-screen1 .btn-subscribe1 ,.btn-search-show,.btn-jobsapp{
   font-size: 16px;
 }
 .job-screen1 .btn:hover {
-  background-color: var(--btn-hover);
+  background-color: var(--firstColor) !important;
 }
 @media (max-width: 767px) {
   .job-screen1 .form-control {
@@ -226,7 +242,7 @@
   box-shadow: none;
   color: var(--white);
 }
-.job-screen1 .btn-subscribe1 {
+.job-screen1 .btn-subscribe1 ,.btn-search-show,.btn-jobsapp{
   background-color: var(--secondColor) !important;
   border: 0px;
   font-weight: var(--fw-600);
@@ -238,9 +254,16 @@
   text-align: center;
   height: 50px !important;
 }
-
+.btn-jobsapp{
+  height: 48px !important;
+}
 .job-screen1 .btn-subscribe1:focus,
-.job-screen1 .btn-subscribe1:hover {
+.job-screen1 .btn-subscribe1:hover
+,.btn-search-show:focus,
+.btn-search-show:hover ,
+.btn-jobsapp:focus ,
+.btn-jobsapp:hover {
+  background-color: var(--firstColor) !important;
   opacity: 0.9;
 }
 
@@ -266,79 +289,79 @@
 
 
 :root{
-    /* Colors */
-    --Primary: #BF9B30;
-    --secondary:#EDD587;
-    --Green: #34A853;
-    --Red: #ea4335;
-    --Grey: Grey;
-    --black: #1B1A1AED;
-    --white:#fff;
-    --alpha-bg:#1515167e;
-    --top-bg: #1B1A1AED;
-    --footer-bg:#1A1A1A;
-    --content-bg:#2a2a2a;
-    --exam-today:#D9D9D91C;
-    --course:#1111118F;
-    --main-bg:#212121;
-    --footer-clr:#141313;
-    --main-clr:#1a1919;
-    --overlay:-webkit-linear-gradient(top,rgba(26,25,25,0.8),rgba(26,25,25,1));
-    --login-bg:#2f2f2f;
-    --form-bg:#252525;
-    --input-bg:#414040;
-    --password-eye:#676767;
+  /* Colors */
+  --Primary: #BF9B30;
+  --secondary:#EDD587;
+  --Green: #34A853;
+  --Red: #ea4335;
+  --Grey: Grey;
+  --black: #1B1A1AED;
+  --white:#fff;
+  --alpha-bg:#1515167e;
+  --top-bg: #1B1A1AED;
+  --footer-bg:#1A1A1A;
+  --content-bg:#2a2a2a;
+  --exam-today:#D9D9D91C;
+  --course:#1111118F;
+  --main-bg:#212121;
+  --footer-clr:#141313;
+  --main-clr:#1a1919;
+  --overlay:-webkit-linear-gradient(top,rgba(26,25,25,0.8),rgba(26,25,25,1));
+  --login-bg:#2f2f2f;
+  --form-bg:#252525;
+  --input-bg:#414040;
+  --password-eye:#676767;
 
 
 
-    /* Colors of Button */
-    --btn-defauit: #BF9B30;
-    --btn-hover: #e7bc3c;
-    --btn-disabled: #e1e1e1;
+  /* Colors of Button */
+  --btn-defauit: #BF9B30;
+  --btn-hover: var(--firstColor);
+  --btn-disabled: #e1e1e1;
 
-    /* Transition */
-    --transition-1: all 0.4s ease;
+  /* Transition */
+  --transition-1: all 0.4s ease;
 
-    /* Font-family */
-    --font-family: 'Open Sans', sans-serif;
-    --font-semiBold: 600px;
-    --font-regular: 400px;
+  /* Font-family */
+  --font-family: 'Open Sans', sans-serif;
+  --font-semiBold: 600px;
+  --font-regular: 400px;
 
-    /* font-weight */
-    --fw-300: 300;
-    --fw-400: 400;
-    --fw-500: 500;
-    --fw-600: 600;
+  /* font-weight */
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
 
-    /* typography */
-    --h1-48: 48px;
-    --h1-50: 50px;
-    --h1-52: 52px;
-    --h1-54: 54px;
-    --h1-56: 56px;
-    --h1-58: 58px;
-    --h1-60: 60px;
+  /* typography */
+  --h1-48: 48px;
+  --h1-50: 50px;
+  --h1-52: 52px;
+  --h1-54: 54px;
+  --h1-56: 56px;
+  --h1-58: 58px;
+  --h1-60: 60px;
 
-    --h2-34: 34px;
-    --h2-36: 36px;
-    --h2-38: 38px;
-    --h2-40: 40px;
-    --h2-42: 42px;
-    --h2-44: 44px;
-    --h2-46: 46px;
-    --h2-48: 48px;
-    --h2-50: 50px;
+  --h2-34: 34px;
+  --h2-36: 36px;
+  --h2-38: 38px;
+  --h2-40: 40px;
+  --h2-42: 42px;
+  --h2-44: 44px;
+  --h2-46: 46px;
+  --h2-48: 48px;
+  --h2-50: 50px;
 
-    --h4-18:18px;
-    --h4-20:20px;
-    --h4-22:22px;
+  --h4-18:18px;
+  --h4-20:20px;
+  --h4-22:22px;
 
-    --p-14:14px;
-    --p-16:16px;
-    --p-18:18px;
-    --p-20:20px;
-    --p-22:22px;
-    --p-24:24px;
+  --p-14:14px;
+  --p-16:16px;
+  --p-18:18px;
+  --p-20:20px;
+  --p-22:22px;
+  --p-24:24px;
 }
 
 
@@ -346,169 +369,34 @@
 
 
 @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
-.menu-job-box1 {
-  background-color: var(--Top-bg);
-  font-family: var(--font-family);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ///////////////////page3////////////////////////////////////////////////////////////// */
+.job-app-screen_1{
+  background-image: url(../../Assets/slider-bg.png);
 
 }
-.menu-job-box1 .btn {
-  color: #fff;
-  font-weight: var(--fw-600);
-}
-.menu-job-box1  .btn:hover {
-  color: #fff !important;
-  background-color: var(--btn-hover) !important;
-}
-.menu-job-box1  .form-control {
-  width: 70%;
-  border-radius: 5px 0px 0px 5px / 5px 0px 0px 5px;
-  display: inline-block;
-}
-.menu-job-box1 .form-inline .btn {
-  width: 30%;
-  border: none;
-  background-color: var(--btn-defauit);
-  border-radius: 0;
-  border-radius: 0% 5px 5px 0% / 0% 5px 5px 0%;
-  vertical-align: baseline;
+.menu-job-box1{
+  background-color: var(--secondColor);
 }
 
-.menu-job-box1 .input-group {
-  width: 80%;
-}
-.menu-job-box1  .input-group-text {
-  text-align: center;
-  background-color: var(--Primary);
-  width: 30%;
-  color: #fff !important;
-  font-weight: var(--fw-600);
-  justify-content: center;
-}
-.menu-job-box1  input.empty {
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  color: red;
-}
-
-.menu-job-box1  .mainLoginInput::-webkit-input-placeholder {
-  font-family: FontAwesome;
-  font-weight: normal;
-  overflow: visible;
-  vertical-align: top;
-  display: inline-block !important;
-  padding-left: 5px;
-  padding-top: 2px;
-  color: var(--Primary);
-}
-
-.menu-job-box1  .mainLoginInput::-moz-placeholder {
-  font-family: FontAwesome;
-  font-weight: normal;
-  overflow: visible;
-  vertical-align: top;
-  display: inline-block !important;
-  padding-left: 5px;
-  padding-top: 2px;
-  color: hsl(9, 40%, 60%);
-}
-
-.menu-job-box1 .mainLoginInput:-ms-input-placeholder {
-  font-family: FontAwesome;
-  font-weight: normal;
-  overflow: visible;
-  vertical-align: top;
-  display: inline-block !important;
-  padding-left: 5px;
-  padding-top: 2px;
-  color: hsl(9, 40%, 60%);
-}
-.menu-job-box1  .menu-job1 {
-  flex: 30%;
-  background-color: rgba(0, 0, 0, 0.19);
-  /* width: 362px; */
-  /* padding-bottom: 1.2rem; */
-  padding: 20px;
-  height: 90%;
-  border-radius: 5px;
-}
-.menu-job-box1  .menu-section1 {
-  padding: 20px;
-}
-
-.menu-job-box1  .fitter-container1 {
-  width: 95%;
-  height: 62px;
-  background-color: rgba(17, 17, 17, 0.56);
-}
-/* .filter {
-} */
-.menu-job-box1  .clear-all1 {
-  color: var(--secondColor) !important;
-  border-radius: 5px;
-}
-/* .location-form {
-  width: 100%;
-  color: #fff;
-} */
-/*--------Select form*/
-.menu-job-box1  .form-select {
-  width: 95%;
-  height: 49px;
-  border-radius: 5px;
-  color: #fff;
-  background-color: rgba(86, 85, 85, 0.079);
-  --bs-form-select-bg-img: url(data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27%3e%3cpath fill=%27none%27 stroke=%27%23343a40%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27 stroke-width=%272%27 d=%27m2 5 6 6 6-6%27/%3e%3c/svg%3e);
-
-  border-color: #00000000 !important;
-  border-bottom: 1px solid #efefef !important;
-}
-
-.menu-job-box1  .form-select:focus {
-  background-color: rgba(86, 85, 85, 0.079);
-  text-align: center;
-  background-color: rgba(217, 217, 217, 0.17);
-  border-color: #00000000 !important;
-  outline: 0;
-  transition: all 0.3s ease-in;
-}
-.menu-job-box1  option.options-location {
-  color: #fff;
-  background-color: #292828 !important;
-}
-/* Check boxs */
-.menu-job-box1  .form-check-input:checked {
-  background-color: #fd9d0d;
-  border-color: #bdfd0d;
-}
-.menu-job-box1  .logo-comp1 img {
-  display: inline-block;
-  width: 66px;
-  height: 50px;
-}
-
-/* */
-.menu-job-box1  .contacts-job1 {
- 
-  flex: 70%;
-  /* padding: 2rem 2rem 5rem 2rem; */
-  height: 90%;
-  padding: 20px;
-}
-
-.menu-job-box1  span img {
-  width: 66px;
-  height: 50px;
-}
-.menu-job-box1  .onsite1 {
-  /* margin-right: 1em; */
-  text-align: end;
-}
-.menu-job-box1  .onsite-icon1 {
-  color: var(--Primary);
-  margin-right: 5px;
-}
 .menu-job-box1  .search-key1 span button {
   color: #fff;
 }
@@ -516,26 +404,15 @@
   text-align: end;
 }
 .menu-job-box1  .btn-apply1 button {
-  width: 20%;
-  background-color: var(--Primary) !important;
+  background-color: var(--secondColor) !important;
+  width: 100%;
+  border-radius: 5px;
 }
-/* @media (max-width: 767px) {
-  .form-control {
-    width: 100%;
-    border-radius: 5px;
-    height: 40px;
-    border-radius: 5px;
-  }
-  .btn {
-    width: 100%;
-    border-radius: 5px;
-  }
-} */
-.menu-job-box1  .form-inline .bar-icon1 {
-  display: none;
-}
+
+
 .menu-job-box1  .onsite-mob-view1 {
-  display: none;
+  display: inline;
+  margin-left: 4px;
 }
 
 @media (max-width: 767px) {
@@ -562,10 +439,7 @@
     border-radius: 5px;
     margin-left: 6px;
   }
-  /* .form input {
-    width: 345px;
-    height: 47px;
-  } */
+ 
   .menu-job-box1  .menu-job1 {
     display: none;
   }
@@ -574,10 +448,7 @@
     width: 353px;
     height: 1015px;
   }
-  .menu-job-box1  .btn-apply1 button {
-    width: 100%;
-    border-radius: 5px;
-  }
+ 
   .menu-job-box1  .comp-name1 {
     flex-direction: column;
     align-items: flex-start !important;
@@ -585,19 +456,17 @@
   .menu-job-box1  .onsite-web-view1 {
     display: none;
   }
-  .menu-job-box1  .onsite-mob-view1 {
-    display: inline;
-    margin-left: 4px;
-  }
+  
   .menu-job-box1  .minmiz-font1 {
     font-size: 15px;
+    color: #e1e1e1 !important;
   }
   .menu-job-box1  .job-company-post1 span {
     display: block;
   }
 }
 .job-screen-show1 {
-    /* background: url('../../assets/images/secondary_background.jpg'); */
+
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -610,7 +479,7 @@
   }
   .job-screen-show1 .btn:hover {
     color: var(--white) !important;
-    background-color: var(--btn-hover) !important;
+    background-color: var(--firstColor) !important;
   }
   
   .job-screen-show1 .job-title {
@@ -728,10 +597,7 @@
     outline: 0;
     transition: all 0.3s ease-in;
   }
-  .job-screen-show1 option.options-location {
-    color: #fff;
-    background-color: #292828 !important;
-  }
+
   /* Check boxs */
   .job-screen-show1 .form-check-input:checked {
     background-color: var(--Primary);
@@ -755,7 +621,7 @@
     font-weight: 400;
   }
   .job-screen-show1 .onsite-icon1 {
-    color: var(--Primary);
+    color: #ffffff !important;
     margin-right: 5px;
   }
   .job-screen-show1 .search-key1 span button {
@@ -768,11 +634,7 @@
   .job-screen-show1 .btn-apply1 {
     text-align: end;
   }
-  .job-screen-show1 .btn-apply1 button {
-    width: 20%;
-    background-color: var(--Primary) !important;
-    border: 0;
-  }
+
   .job-screen-show1 .posted-time1 .icon1 {
     font-size: 34px;
     color: #817f7f;
@@ -834,6 +696,8 @@
     .job-screen-show1 .btn-apply1 button {
       width: 100%;
       border-radius: 5px;
+      background-color: var(--firstColor) !important;
+      border: 0;
     }
     .job-screen-show1 .comp-name1 {
       flex-direction: column;
@@ -867,6 +731,10 @@
   
 
 
+
+
+
+  /* /////////////////////////////////////////page3//////////////////////////////////////////////////// */
   @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
 
 .job-app-screen_1 .bg-layer {
@@ -889,7 +757,7 @@
 /* apply job */
 .job-app-screen_1 .contacts-job {
   position: relative;
-  background: rgba(0, 0, 0, 0.19) !important;
+  background: var(--secondColor) !important;
 }
 
 .job-app-screen_1 .btn {
@@ -902,7 +770,7 @@
 
 .job-app-screen_1 .btn:hover {
   color: #fff !important;
-  background-color: var(--btn-hover) !important;
+  background-color: var(--firstColor) !important;
 }
 
 .job-app-screen_1 .job-screen {
@@ -911,6 +779,10 @@
   font-family: var(--font-family);
 }
 
+.job-app-screen_1 .fa-2xl {
+  font-size: 70px;
+  color: var(--firstColor) !important;
+}
 /*Search section */
 
 .job-app-screen_1 .form-control {
@@ -1019,8 +891,7 @@
   width: 95%;
   height: 49px;
   border-radius: 5px;
-  color: #fff;
-  background-color: rgba(217, 217, 217, 0.17);
+
   --bs-form-select-bg-img: url(data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27%3e%3cpath fill=%27none%27 stroke=%27%23343a40%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27 stroke-width=%272%27 d=%27m2 5 6 6 6-6%27/%3e%3c/svg%3e);
   border-color: #00000000 !important;
   border-bottom: 1px solid #efefef !important;
@@ -1028,6 +899,7 @@
 .job-app-screen_1 .job-titel {
   font-size: 20px;
   font-weight: bold;
+  color: #efefef;
 }
 
 .job-app-screen_1 .form-select:focus {
@@ -1039,14 +911,11 @@
   transition: all 0.3s ease-in;
 }
 
-.job-app-screen_1 option.options-location {
-  color: #fff;
-  background-color: #292828 !important;
-}
+
 
 /* Check boxs */
 .job-app-screen_1 .form-check-input:checked {
-  background-color: rgba(191, 155, 48, 1) !important;
+  background-color:var(--firstColor) !important;
 }
 
 .job-app-screen_1 .logo-comp img {
@@ -1056,14 +925,14 @@
 }
 /* Contacts Job*/
 .job-app-screen_1 .contacts-job {
-  background-color: rgba(0, 0, 0, 0.19) !important;
+  background: var(--secondColor) !important;
   flex: 70% 1;
   height: 100%;
   padding: 10px 20px;
   margin-bottom: 20px;
 }
 .job-app-screen_1 .small-style-text{
-  color: rgba(51, 51, 51, 1);
+  color:#e1e1e1 !important;
 }
 .job-app-screen_1 span img {
   width: 66px;
@@ -1075,7 +944,7 @@
 }
 
 .job-app-screen_1 .onsite-icon {
-  color: var(--Primary);
+  color: #ffffff !important;
   margin-right: 5px;
 }
 
@@ -1125,17 +994,14 @@
   width: 445px;
   height: 202px;
   padding: 20px;
-  border: 2px dashed var(--Primary);
+  border: 2px dashed var(--firstColor);
 
 }
 
-.job-app-screen_1 .fa-2xl{
-font-size: 70px;
-color: var(--Primary);
-}
+
 .job-app-screen_1 .upload-cv .spcial-style {
-  color: var(--Primary);
-  border-bottom: 1px solid var(--Primary);
+  color: var(--firstColor);
+  border-bottom: 1px solid var(--firstColor);
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
@@ -1150,9 +1016,11 @@ color: var(--Primary);
 position: absolute;
 right: 15px !important;
 bottom: 15px !important;
+display: flex;
+flex-direction: column-reverse;
 }
-.job-app-screen_1 .btn-submit-app .btn-warning {
-  background-color: var(--Primary);
+.job-app-screen_1 .btn-submit-app {
+  background-color: var(--firstColor);
 }
 
 .job-app-screen_1 .filed-appliction input {
@@ -1205,9 +1073,7 @@ bottom: 15px !important;
 
 /* Mobile View */
 @media (max-width: 767px) {
-  .job-app-screen_1 .contacts-job{
-    /* margin: auto; */
-  }
+ 
   .job-app-screen_1 .filed-appliction form div label {
     margin-bottom: 15px;
     margin-top: 15px;
@@ -1298,16 +1164,4 @@ bottom: 15px !important;
     display: inline;
     margin-left: 4px;
   }
-
-  .job-app-screen_1 .minmiz-font {
-    font-size: 15px;
-  }
-
-  .job-app-screen_1 .job-company-post span {
-    display: block;
-  }
-  .job-app-screen_1 .btn-submit-app{
-    display: flex;
-    flex-direction: column-reverse;
-    }
 }
