salma's home changes

--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -32,7 +32,7 @@
 .abouticon {
   font-size: 25px;
   margin: 15px 0px;
-  color: var(--firstColor);
+  color: var(--thirdColor);
 }
 
 .abouticontxt {
