--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ html {
 
 :root {
     --firstColor: #018883;
-    --secondColor: #1B3F6B;
+    --secondColor: #132f53;
+    --thirdColor:#f5656d;
 }
 
 section,
